Fix layout issue with h6

--- a/audiophile/css/product-detail.css
+++ b/audiophile/css/product-detail.css
@@ -94,7 +94,7 @@ p.overline.orange {
     opacity: 1;
 }
 
-h6 {
+.product-content h6 {
     margin-bottom: 30px;
 }
 
